fix(skinStyles): 🐛 fix Echo overflow in small screens

--- a/skinStyles/extensions/Echo/ext.echo.ui.desktop.less
+++ b/skinStyles/extensions/Echo/ext.echo.ui.desktop.less
@@ -29,8 +29,8 @@
 				}
 
 				&-body {
-					// Do not overscoll outside
-					overscroll-behavior: contain;
+					max-width: 100% !important; // do not overflow the screen
+					overscroll-behavior: contain; // do not overscoll outside
 				}
 
 				&-footer {
